fixing responsive headers

--- a/css/_bootchange.scss
+++ b/css/_bootchange.scss
@@ -37,13 +37,8 @@ h2,
     background-position: 50%;
 }
 
-// .third {
-//     background-image: url(../images/sesitec.jpg);
-//     background-position: 40% 0px;
-//     background-size: cover;
-// }
 
-.fourth {
+.third {
     background-image: url(../images/philip1.jpg);
     background-position: 80% 0px;
     background-size: cover;
