--- a/css/_firsttime.scss
+++ b/css/_firsttime.scss
@@ -7,7 +7,7 @@
 // http://www.biyahenglaguna.com/wp-content/uploads/2014/05/IMG_3499-1024x682.jpg
 .questions-hero{
 background-image: url(../images/boots-change3.jpg);
-background-position:40% 0;
+background-position:center center;
 
    
    }
