--- a/css/_lessons.scss
+++ b/css/_lessons.scss
@@ -2,7 +2,8 @@
     background: url(../images/sesitec1.jpg);
     background-size: cover;
     // background-position: 40% -380px;
-       background-position: 40% 0px;
+       background-position: center bottom;
+    
 }
 
 nav{
